<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2009 International Health Terminology Standards Development 
Organisation Licensed under the Apache License, Version 2.0 (the "License"); 
you may not use this file except in compliance with the License. You may 
obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
Unless required by applicable law or agreed to in writing, software distributed 
under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.ihtsdo</groupId>
        <artifactId>ihtsdo-wb-parent</artifactId>
        <version>1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ihtsdo.tk</groupId>
    <artifactId>tk-mmb</artifactId>
    <version>3.0.2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${branch}: (MMP) Terminology Toolkit</name>
    <description>The IHTSDO toolkit provides two software frameworks for
        terminology-focused applications: one for build-process
        automation, and another for interactive development environments.
        These frameworks provide application skeletons
        that can be customized by an application developer to meet unique
        needs of their end users.
    </description>
    <scm>
        <connection>scm:svn:https://csfe.aceworkspace.net/svn/repos/tk3/trunk/tk3</connection>
        <developerConnection>scm:svn:https://csfe.aceworkspace.net/svn/repos/tk3/trunk/tk3</developerConnection>
        <url>https://csfe.aceworkspace.net/integration/viewvc/viewvc.cgi/trunk/?root=tk3&amp;system=exsy1002</url>
    </scm>
    <properties>
        <branch>trunk</branch>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <drools.version>5.3.0.Final</drools.version>
        <jbpm.version>5.1.0.Final</jbpm.version>
        <mvel2.version>2.1.0.drools4</mvel2.version>
        <org.apache.lucene.version>4.0.0</org.apache.lucene.version>
        <wb-icons-version>1.0.8</wb-icons-version>
        <je.version>5.0.55</je.version>
        <svnusername>${relusername}</svnusername>
        <svnpassword>${relpassword}</svnpassword>
        <svnkit.version>1.3.5</svnkit.version>
        <juint.version>4.8.2</juint.version>
        <maven-release-plugin.version>2.0</maven-release-plugin.version>
        <maven-jxr-plugin.version>2.2</maven-jxr-plugin.version>
        <maven-compiler-plugin.version>2.4</maven-compiler-plugin.version>
        <maven-project-info-reports-plugin.version>2.2</maven-project-info-reports-plugin.version>
        <maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
        <maven-plugin-plugin.version>2.6</maven-plugin-plugin.version>
        <maven-surefire-report-plugin.version>2.6</maven-surefire-report-plugin.version>
        <jersey-version>1.15</jersey-version>
        <javafx.version>2.2.7-b01</javafx.version> <!-- From java 1.7.0_17 -->
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.oracle</groupId>
                <artifactId>jfxrt</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${juint.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-compiler</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-core</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>knowledge-api</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-templates</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jbpm</groupId>
                <artifactId>jbpm-bpmn2</artifactId>
                <version>${jbpm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>2.5.16</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jdt</groupId>
                <artifactId>core</artifactId>
                <version>3.4.2.v_883_R34x</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr-runtime</artifactId>
                <version>3.1.3</version>
            </dependency>
            <dependency>
                <groupId>org.mvel</groupId>
                <artifactId>mvel2</artifactId>
                <version>${mvel2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sleepycat</groupId>
                <artifactId>je</artifactId>
                <version>${je.version}</version>
            </dependency>
            <dependency>
                <groupId>org.tmatesoft.svnkit</groupId>
                <artifactId>svnkit-javahl</artifactId>
                <version>${svnkit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.tmatesoft.svnkit</groupId>
                <artifactId>svnkit</artifactId>
                <version>${svnkit.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>net.java.dev.jna</groupId>
                        <artifactId>jna</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.tmatesoft.sqljet</groupId>
                        <artifactId>sqljet</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.tmatesoft.svnkit</groupId>
                        <artifactId>trilead-ssh2</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12</version>
                    <configuration>
                        <enableAssertions>false</enableAssertions>
                    </configuration>                
                </plugin>
                <plugin>
                    <groupId>com.sun.tools.jxc.maven2</groupId>
                    <artifactId>maven-jaxb-schemagen-plugin</artifactId>
                    <version>1.2</version>
                    <dependencies>
                        <dependency>
                            <groupId>javax.xml.bind</groupId>
                            <artifactId>jaxb-api</artifactId>
                            <version>2.2</version>
                        </dependency>
                        <dependency>
                            <groupId>com.sun.xml.bind</groupId>
                            <artifactId>jaxb-xjc</artifactId>
                            <version>2.2</version>
                        </dependency>
                        <dependency>
                            <groupId>com.sun.xml.bind</groupId>
                            <artifactId>jaxb-impl</artifactId>
                            <version>2.2</version>
                        </dependency>
                        <dependency>
                            <groupId>com.sun.xml.bind</groupId>
                            <artifactId>jaxb-xjc</artifactId>
                            <version>2.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <preparationGoals>clean install</preparationGoals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <remoteTagging>true</remoteTagging>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.2</version>
                            <reports>
                                <report>index</report>
                                <report>project-team</report>
                                <report>license</report>
                                <report>mailing-list</report>
                                <report>dependencies</report>
                                <report>dependency-convergence</report>
                                <report>plugin-management</report>
                                <report>cim</report>
                                <report>issue-tracking</report>
                                <report>scm</report>
                                <report>summary</report>
                            </reports>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.7</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <version>2.1</version>
                            <configuration>
                                <aggregate>true</aggregate>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-report-plugin</artifactId>
                            <version>2.6</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>2.4</version>
                            <configuration>
                                <formats>
                                    <format>xml</format>
                                    <format>html</format>
                                </formats>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>2.6</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.3.1</version>
                            <configuration>
                                <argLine>-Xmx256m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                            </configuration>
                            <!-- Usually findbugs needs a lot of memory, change these values if needed. -->
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>jdepend-maven-plugin</artifactId>
                            <version>2.0-beta-2</version>
                        </plugin>                    
                    </reportPlugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>cobertura-maven-plugin</artifactId>
                        <version>2.4</version>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>taglist-maven-plugin</artifactId>
                        <version>2.4</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jxr-plugin</artifactId>
                        <version>2.1</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-pmd-plugin</artifactId>
                        <version>2.5</version>
                        <configuration>
                            <linkXref>true</linkXref>
                            <minimumTokens>100</minimumTokens>
                            <minimumPriority>3</minimumPriority>
                            <!-- Change minimum priority to see more or less messages -->
                            <targetJdk>1.7</targetJdk>
                        </configuration>
                    </plugin>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>tk-api-dto</module>
        <module>tk-concept-component</module>
        <module>tk-cern-prim</module>
        <module>tk-bdb</module>
        <module>tk-rest-client</module>
        <module>tk-mojo</module>
        <module>tk-uuid-maps</module>
        <module>tk-rest-server</module>
        <module>tk-fx-model</module>
    </modules>
    <profiles>
        <profile>
            <id>metrics</id>
            <modules>
                <module>tk-metrics</module>
            </modules>
        </profile>
        <profile>
            <id>default-tools.jar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>com.sun.tools.jxc.maven2</groupId>
                            <artifactId>maven-jaxb-schemagen-plugin</artifactId>
                            <dependencies>
                                <dependency>
                                    <groupId>com.sun</groupId>
                                    <artifactId>tools</artifactId>
                                    <version>1.7</version>
                                    <scope>system</scope>
                                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                                </dependency>
                                <!--                                <dependency>
                                    <groupId>com.oracle</groupId>
                                    <artifactId>javafx</artifactId>
                                    <version>current</version>
                                    <scope>system</scope>
                                    <systemPath>${java.home}/lib/jfxrt.jar</systemPath>
                                </dependency>-->
                            </dependencies>
                        </plugin>
                    </plugins>                
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
